--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-elements": "^2.2.1",
-    "react-native-gesture-handler": "^1.7.0",
-    "react-native-reanimated": "^1.13.0",
+    "react-native-gesture-handler": "~1.6.0",
+    "react-native-reanimated": "~1.9.0",
     "react-native-screens": "^2.10.1",
     "react-native-web": "~0.11.7"
   },
